Improving CommandThroughMessageService added ObjectMapper for command-messages (still dirty code)